--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,6 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.projectlombok:lombok')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
